Ingress/ingress-app-js.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-js
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-worldapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-lb-app-js
                port:
                  number: 8080
